# Hand-Gesture-Mouse-Control

./: README.md  pyproject.toml
code/: a.py  b.py
