[tool.poetry]
name = "hand-gesture-mouse-control"
version = "0.1.0"
description = ""
authors = ["Hiram20buz <l20211847@tectijuana.edu.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
